Fix stretching link

--- a/src/styles/blocks/footer/base.css
+++ b/src/styles/blocks/footer/base.css
@@ -37,6 +37,7 @@
 /* Link */
 
 .footer__link {
+	justify-self: start;
 	color: var(--color-text-secondary);
 	box-decoration-break: clone;
 }
